# AmbiguityGenerator

./: .travis.yml  00_colab_alapok.ipynb  Ambiguity.cabal  LICENSE  README.md  ambiguity.bib  stack.yaml
app/: Main.hs
draws/: Main.hs
src/: Ambiguity.hs  Ambiguity.hs~  MonadSystemEntropy.hs
web/: API.hs  Docs.hs  Main.hs  UI.hs
web/static/: index.html
web/website/: index.html
