name:                Ambiguity
version:             0.1.0.0
synopsis:            Library for generating ambiguous random values.
description:         Library for generating ambiguous random values.
homepage:            https://github.com/Chobbes/Ambiguity#readme
license:             MIT
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           Calvin Beck, Jack Stecher, Timothy Shields
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ambiguity
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1 && < 1.2
                     , reinterpret-cast >= 0.1 && < 0.2
                     , containers >= 0.5.10 && < 0.6
  default-language:    Haskell2010

executable histogram
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , Ambiguity
                     , random >= 1.1 && < 1.2
                     , Chart >= 1.8.2 && < 1.9
                     , Chart-diagrams >= 1.8.2 && < 1.9

executable draws
  hs-source-dirs:      draws
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , Ambiguity
                     , random >= 1.1 && < 1.2

executable ambiguity-server
  hs-source-dirs:      web
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  other-modules:       API, UI, Docs
  build-depends:       base
                     , Ambiguity
                     , random >= 1.1 && < 1.2
                     , servant >= 0.11 && < 0.12
                     , servant-server >= 0.11 && < 0.12
                     , servant-lucid >= 0.7.1 && < 0.8
                     , servant-docs >= 0.10 && < 0.12
                     , lucid >= 2.9.8.1 && < 3
                     , text-show >= 3.6 && < 3.7
                     , http-media >= 0.6.4 && < 0.7
                     , warp >= 3.2.13 && < 3.3
                     , wai >= 3.2.1.1 && < 3.3
                     , wai-logger >= 2.3 && < 2.4
                     , aeson >= 1.1.2 && < 1.2
                     , http-api-data >= 0.3.7.1 && < 0.4
                     , text >= 1.2.2.2 && < 1.3
                     , bytestring >= 0.10.8.1 && < 0.11

test-suite Ambiguity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Ambiguity
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/Ambiguity
